<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_default"
        />

    <Button
        android:id="@+id/main_mvp_test"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/main_mvp_test"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/main_swipe_delete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/main_swipe_delete"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/main_bezier_curve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/main_bezier_curve"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/main_coordinator_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/main_coordinator_layout"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/main_crop_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/crop_image"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/web_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="webView"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/sonic_web_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="sonicWebView"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

    <Button
        android:id="@+id/thread_communicate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="线程通信"
        android:background="@drawable/draw_shape_round_rectangle_white_solid"
        />

</LinearLayout>